--- a/modulo1/flex-grid-pratica/video2.css
+++ b/modulo1/flex-grid-pratica/video2.css
@@ -3,13 +3,13 @@
     padding: 0;
 }
 
-.cabecalho1{
-    border: solid 5px rgb(155, 74, 74);
+.cabecalho2{
+    background-color: rgb(201, 106, 106);
+    border: solid 5px rgb(201, 106, 106);
     height: 110px;
-    background-color: rgb(155, 74, 74);
 }
 
-.cabecalho1 h1{
+.cabecalho2 h1{
     color: white;
     display: flex;
     text-align: center;
@@ -19,7 +19,7 @@
 }
 
 section{
-    border: soli rgb(155, 74, 74);
+    border: solid rgb(201, 106, 106);
     display: flex;
     justify-content: center;
 }
@@ -30,18 +30,16 @@ section video{
     border-radius: 20px;
 }
 
-.rodape1{
-    border: solid rgb(155, 74, 74) ;
+.rodape2{
+    background-color: rgb(201, 106, 106);
+    border: solid rgb(201, 106, 106);
     height: 100px;
-    background-color: rgb(155, 74, 74);
-    
 }
 
-.rodape1 h2{
-    color: rgb(255, 255, 255);
+.rodape2 h2{
+    color: white;
     display: flex;
     justify-content: center;
     margin: 40px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
