--- a/modulo1/flex-grid-pratica/video7.css
+++ b/modulo1/flex-grid-pratica/video7.css
@@ -3,14 +3,12 @@
     padding: 0;
 }
 
-.cabecalho1{
-    border: solid 5px rgb(155, 74, 74);
+.cabecalho7{
+    border: solid 5px red;
     height: 110px;
-    background-color: rgb(155, 74, 74);
 }
 
-.cabecalho1 h1{
-    color: white;
+.cabecalho7 h1{
     display: flex;
     text-align: center;
     justify-content: center;
@@ -19,7 +17,7 @@
 }
 
 section{
-    border: soli rgb(155, 74, 74);
+    border: solid black;
     display: flex;
     justify-content: center;
 }
@@ -30,18 +28,14 @@ section video{
     border-radius: 20px;
 }
 
-.rodape1{
-    border: solid rgb(155, 74, 74) ;
+.rodape7{
+    border: solid green;
     height: 100px;
-    background-color: rgb(155, 74, 74);
-    
 }
 
-.rodape1 h2{
-    color: rgb(255, 255, 255);
+.rodape7 h2{
     display: flex;
     justify-content: center;
     margin: 40px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
