--- a/modulo1/flex-grid-pratica/video3.css
+++ b/modulo1/flex-grid-pratica/video3.css
@@ -4,9 +4,9 @@
 }
 
 .cabecalho3{
-    border: solid 5px pink;
+    border: solid 5px  rgb(175, 135, 135);
     height: 110px;
-    background-color: pink;
+    background-color:  rgb(175, 135, 135);
 }
 
 .cabecalho3 h1{
@@ -19,7 +19,7 @@
 }
 
 section{
-    border: solid pink;
+    border: solid  rgb(175, 135, 135);
     display: flex;
     justify-content: center;
 }
@@ -31,7 +31,8 @@ section video{
 }
 
 .rodape3{
-    border: solid pink;
+    border: solid  rgb(175, 135, 135);
+    background-color:  rgb(175, 135, 135);
     height: 100px;
 }
 
@@ -40,6 +41,5 @@ section video{
     display: flex;
     justify-content: center;
     margin: 40px;
-    background-color: pink;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
