--- a/modulo1/flex-grid-pratica/video5.css
+++ b/modulo1/flex-grid-pratica/video5.css
@@ -4,11 +4,13 @@
 }
 
 .cabecalho5{
-    border: solid 5px red;
+    border: solid 5px  rgb(175, 135, 135);
+    background-color:  rgb(175, 135, 135);
     height: 110px;
 }
 
 .cabecalho5 h1{
+    color: white;
     display: flex;
     text-align: center;
     justify-content: center;
@@ -17,7 +19,7 @@
 }
 
 section{
-    border: solid black;
+    border: solid  rgb(175, 135, 135);
     display: flex;
     justify-content: center;
 }
@@ -28,13 +30,14 @@ section video{
     border-radius: 20px;
 }
 
-
 .rodape5{
-    border: solid green;
+    border: solid  rgb(175, 135, 135);
     height: 100px;
+    background-color:  rgb(175, 135, 135);
 }
 
 .rodape5 h2{
+    color: white;
     display: flex;
     justify-content: center;
     margin: 40px;
